--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,6 @@ before_install:
 - sudo chmod +x setup.sh
 - sudo ./setup.sh
 
-install: 
-- "python setup.py install"
+install: "python setup.py install"
 
-script: 
-- "python pyArango/tests/tests.py"
-- "python pyArango/tests/validators_tests.py"
+script: "python -m unittest discover pyArango/tests/"
