--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,9 @@ before_install:
 - sudo chmod +x setup.sh
 - sudo ./setup.sh
 
-install: "python setup.py install"
+install: 
+- "python setup.py install"
 
-script: "python -m unittest discover pyArango/tests/"
+script: 
+- "python pyArango/tests/tests.py"
+- "python pyArango/tests/validators_tests.py"
