--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,11 @@ before_install:
 - sudo chmod +x setup.sh
 - sudo ./setup.sh
 
-install: 
+install:
 - "python setup.py install"
 
 
-script: "python -m unittest discover pyArango/tests/"
+script:
+- "export ARANGODB_ROOT_USERNAME=root"
+- "export ARANGODB_ROOT_PASSWORD=root"
+- "python -m unittest discover pyArango/tests/"
