--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ before_install:
 - sed -e 's/disable-authentication true/authentication false/g' setup.sh > setup.sh.tmp && mv -f setup.sh.tmp setup.sh
 - sudo chmod +x setup.sh
 - sudo ./setup.sh
-
-install:
-- "python setup.py install"
-
-
-script:
+# hack: ensure env variables are not None
 - "export ARANGODB_ROOT_USERNAME=root"
 - "export ARANGODB_ROOT_PASSWORD=root"
-- "python -m unittest discover pyArango/tests/"
+
+
+install: "python setup.py install"
+
+
+script: "python -m unittest discover pyArango/tests/"
