--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,18 @@
-# sudo: required
-
 language: python
 
 python:
   - "2.7"
   - "3.5"
 
-# services:
-#   - docker
-
 before_install:
-# - docker pull arangodb:latest
-# - docker run -d -e ARANGO_NO_AUTH=1 -p 127.0.0.1:8529:8529 arangodb:latest  # ARANGO_ROOT_PASSWORD=root
-# - docker ps -a
-# TODO: sort out docker ports, in the mean time we'll use this installer script https://www.arangodb.com/download/travis-ci/
 - sudo apt-get update
-- sudo apt-get -y install wget  # hack: travis prefers curl
+- sudo apt-get -y install wget
 - echo arangodb3 arangodb/password password root | sudo debconf-set-selections
 - echo arangodb3 arangodb/password_again password root | sudo debconf-set-selections
-- sudo curl -s -L https://www.arangodb.com/repositories/travisCI/setup_arangodb_3.0.2.sh -o setup.sh
-# hack: in v3 'server.disable-authentication true' is changed to 'server.authentication false'
-- sed -e 's/disable-authentication true/authentication false/g' setup.sh > setup.sh.tmp && mv -f setup.sh.tmp setup.sh
+- sudo curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/v3.0.3/setup_arangodb.sh -o setup.sh
 - sudo chmod +x setup.sh
 - sudo ./setup.sh
 
-install: 
-- "python setup.py install"
-
+install: "python setup.py install"
 
 script: "python -m unittest discover pyArango/tests/"
