--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
 - chmod +x setup.sh
 - ./setup.sh
 
-install: "python setup.py install"
+install: python setup.py install
 
-script: "python -m unittest discover pyArango/tests/"
+script: python -m unittest discover pyArango/tests/
+
+after_success: bash <(curl -s https://codecov.io/bash)
