--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,14 @@ python:
   - "2.7"
   - "3.5"
 
+env:
+  - ARANGODB_VERSION: v2.8.9
+  - ARANGODB_VERSION: v3.0.3
+
 before_install:
 - echo arangodb3 arangodb/password password root | sudo debconf-set-selections
 - echo arangodb3 arangodb/password_again password root | sudo debconf-set-selections
-- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/v3.0.3/setup_arangodb.sh -o setup.sh
+- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$ARANGODB_VERSION/setup_arangodb.sh -o setup.sh
 - chmod +x setup.sh
 - ./setup.sh
 - pip install coverage
