--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ python:
   - "3.5"
 
 env:
-  - ARANGODB_VERSION: v2.8.9
-  - ARANGODB_VERSION: v3.0.3
+  - MAJOR_VERSION=arangodb2 VERSION_TAG=v2.8.11
+  - MAJOR_VERSION=arangodb3 VERSION_TAG=v3.0.3
 
 before_install:
-- echo arangodb3 arangodb/password password root | sudo debconf-set-selections
-- echo arangodb3 arangodb/password_again password root | sudo debconf-set-selections
-- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$ARANGODB_VERSION/setup_arangodb.sh -o setup.sh
+- echo $MAJOR_VERSION arangodb/password password root | sudo debconf-set-selections
+- echo $MAJOR_VERSION arangodb/password_again password root | sudo debconf-set-selections
+- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$VERSION_TAG/setup_arangodb.sh -o setup.sh
 - chmod +x setup.sh
 - ./setup.sh
 - pip install coverage
