--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ python:
   - "3.5"
 
 env:
-  - MAJOR_VERSION=arangodb2 VERSION_TAG=v2.8.11
-  - MAJOR_VERSION=arangodb3 VERSION_TAG=v3.0.3
+  - VERSION_TAG: v2.8.11
+  - VERSION_TAG: v3.0.3
 
 before_install:
-- echo $MAJOR_VERSION arangodb/password password root | sudo debconf-set-selections
-- echo $MAJOR_VERSION arangodb/password_again password root | sudo debconf-set-selections
+- echo arangodb3 arangodb/password password root | sudo debconf-set-selections
+- echo arangodb3 arangodb/password_again password root | sudo debconf-set-selections
 - curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$VERSION_TAG/setup_arangodb.sh -o setup.sh
 - chmod +x setup.sh
 - ./setup.sh
