--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ python:
   - "3.5"
 
 env:
-  - DB_VERSION=v2.8.11 ARANGO_ROOT_PASSWORD=root
-  - DB_VERSION=v3.0.3 ARANGO_ROOT_PASSWORD=root
+  - TAG: v2.8.11
+  - TAG: v3.0.3
 
 before_install:
-- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$DB_VERSION/setup_arangodb.sh -o setup.sh
+- curl -s -L https://raw.githubusercontent.com/brennv/arangodb-travis/$TAG/setup_arangodb.sh -o setup.sh
 - chmod +x setup.sh
 - ./setup.sh
 - pip install coverage
