--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ python:
   - "2.7"
   - "3.5"
 
+addons:
+  apt:
+    update: true
+    
 before_script:
+  - sudo apt-get install -y python3-gevent python-gevent
   - chmod 777 ./pyArango/tests/setup_arangodb.sh
   - ./pyArango/tests/setup_arangodb.sh
+  - apt-g
   - pip install coverage
 
 install: python setup.py install
