upgrade travis pip?

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ addons:
     update: true
     
 before_script:
+  - pip upgrade
+  - pip install coverage gevent enum setuptools
   - chmod 777 ./pyArango/tests/setup_arangodb.sh
   - ./pyArango/tests/setup_arangodb.sh
-  - pip install coverage gevent enum
 
 install: python setup.py install
 
