--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 
 install:
   - pip install --upgrade pip
-  - pip install coverage gevent setuptools
+  - pip install coverage gevent setuptools enum34
   - python setup.py install
 
 script: coverage run -m unittest discover pyArango/tests/
